--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 *.iml
 *.iws
 
+/.idea/
+out/
+*class/
+
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -54,11 +58,7 @@ cmake-build-*/
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
-# File-based project format
-*.iws
-
 # IntelliJ
-out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
